--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Cute Dog Generator</h1>
       <button>Get new image</button>
 
+      <p id="loading"></p>
       <img src="" alt="" id="imgDog" />
     </div>
 
